bytecomp: explicit warnings

--- a/bytecomp/BUILD.bazel
+++ b/bytecomp/BUILD.bazel
@@ -108,13 +108,13 @@ compiler_module(
     struct = "bytegen.ml",
     sig    = "Bytegen_cmi",
     warnings = [
-        "ambiguous-name",
-        "disambiguated-name",
-        "fragile-match",
-        "name-out-of-scope",
-        "open-shadow-identifier",
-        "open-shadow-label-constructor",
-        "missing-record-field-pattern",
+        "-ambiguous-name",
+        "-disambiguated-name",
+        "-fragile-match",
+        "-name-out-of-scope",
+        "-open-shadow-identifier",
+        "-open-shadow-label-constructor",
+        "-missing-record-field-pattern",
     ],
     stdlib_deps = [
         "//stdlib:Stdlib.Array",
